--- a/Shock/Info.plist
+++ b/Shock/Info.plist
@@ -25,9 +25,9 @@
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile~ipad</key>
-	<string>SB2</string>
+	<string>iPad Storyboard</string>
 	<key>UIMainStoryboardFile~iphone</key>
-	<string>Main</string>
+	<string>iPhone Storyboard</string>
 	<key>UIRequiredDeviceCapabilities</key>
 	<array>
 		<string>armv7</string>
